<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_report"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/red"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/title_report"
        android:layout_gravity="center_horizontal|top"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:layout_below="@id/title_report"
        android:id="@+id/report"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="15dp"
        >

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/text1"
            android:layout_gravity="bottom" />  -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation = "horizontal">
        <RadioGroup
            android:id="@+id/radiogroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            >
            <RadioButton
                android:id="@+id/single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single"
                android:textSize="20sp"
                />
            <RadioButton
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="20sp"
                />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radiogroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="35dp"
            >
            <RadioButton
                android:id="@+id/week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week"
                android:textSize="20sp"
                />
            <RadioButton
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textSize="20sp"
                />

            <RadioButton
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textSize="20sp"
                />

        </RadioGroup>

    </LinearLayout>


</LinearLayout>